[project]
name = ""
version = ""
description = ""
authors = []
dependencies = []
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
