[project]
name = ""
version = ""
description = ""
authors = []
dependencies = []
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.942",
    "pyproject-flake8>=0.0.1a4",
    "pre-commit>=2.18.1",
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = "__pypackages__"

[tool.mypy]
files = "src/*.py" # SET THIS TO YOUR PROJECT
ignore_missing_imports = true

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
